--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     firebase.initializeApp(config);
     </script>
     <script src="script.js"></script>
+    <script src="selectChat.js"></script>
 </head>
 <body>
-    
+    <h1>Hello</h1>
 </body>
 </html>
