--- a/index.html
+++ b/index.html
@@ -7,16 +7,10 @@
     <title>Wave (chatrooms) - Realtime Database</title>
     
     <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
+    <script src="firebase.js"></script>
     <script>
         // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyAYWEFRSGsK9WhIXjkq9ipNQ9ctjSCGUaY",
-        authDomain: "wavemeagain.firebaseapp.com",
-        databaseURL: "https://wavemeagain.firebaseio.com",
-        projectId: "wavemeagain",
-        storageBucket: "wavemeagain.appspot.com",
-        messagingSenderId: "836420335777"
-    };
+   
     firebase.initializeApp(config);
     </script>
     <script src="script.js"></script>
