--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     firebase.initializeApp(config);
     </script>
     <script src="script.js"></script>
-    <script src="selectChat.js"></script>
+    <script src="helperFunctions.js"></script>
+    <!-- <script src="selectChat.js"></script> -->
 </head>
 <body>
     <h1>Hello</h1>
