adding and removing Users, working.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     firebase.initializeApp(config);
     </script>
     <script src="script.js"></script>
+    <script src="outputting.js"></script>
     <script src="helperFunctions.js"></script>
     <!-- <script src="selectChat.js"></script> -->
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1 id="title">My title - change me!</h1>
+    <div id="textBox"></div>
+    <div id="printedChatChildren"></div>
 </body>
 </html>
