sprucing up some HTML

--- a/index.html
+++ b/index.html
@@ -16,11 +16,23 @@
     <script src="script.js"></script>
     <script src="outputting.js"></script>
     <script src="helperFunctions.js"></script>
+    <script src="hideandshow.js"></script>
     <!-- <script src="selectChat.js"></script> -->
 </head>
 <body>
-    <h1 id="title">My title - change me!</h1>
-    <div id="textBox"></div>
-    <div id="printedChatChildren"></div>
+
+    <div id="chatroom">
+        <h1 id="title">My title - change me!</h1>
+        <div id="textBox"></div>
+        <div id="printedChatChildren"></div>
+
+
+    </div>
+
+    <div id="chatroomsList">
+
+        
+    </div>
+
 </body>
 </html>
