before removing stuff from script.js

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     firebase.initializeApp(config);
     </script>
     <script src="script.js"></script>
-    <script src="selectChat.js"></script>
+    <!-- <script src="selectChat.js"></script> -->
+    <script src="helperFunctions.js"></script>
 </head>
 <body>
     <h1>Hello</h1>
