working on major efforts... _chatbox - realtime(!!!)
NEXT??
_msgs - realtime
_sidemenu - for different rooms
_permissions - sharing rooms, unsharing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wave (chatrooms) - Realtime Database</title>
     
+
+    <script src="setUID.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
     <script src="config.js"></script>
     <script>
@@ -13,10 +15,12 @@
    
     firebase.initializeApp(config);
     </script>
+    <script src="helperFunctions.js"></script>
     <script src="script.js"></script>
     <script src="outputting.js"></script>
     <!-- <script src="selectChat.js"></script> -->
-    <script src="helperFunctions.js"></script>
+    <script src="FirebaseListeners.js"></script>
+    <script src="box.js"></script>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -28,7 +32,7 @@
                 <textarea name="" id="box" ></textarea>
             </div>
         </div>
-        <div class="messages">
+        <div id="makeMessages" class="messages">
             
         </div>
 
