000.js - new feature - msg updating

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- <script src="selectChat.js"></script> -->
     <script src="FirebaseListeners.js"></script>
     <script src="box.js"></script>
+    <script src="000.js"></script>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
