--- a/index.html
+++ b/index.html
@@ -7,21 +7,11 @@
     <title>Wave (chatrooms) - Realtime Database</title>
     
 
-    <script src="setUID.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase.js"></script>
     <script src="config.js"></script>
-    <script>
-        // Initialize Firebase
+    <script src="firestore.js"></script>
+    <script src="userRequestsData.js"></script>
    
-    firebase.initializeApp(config);
-    </script>
-    <script src="helperFunctions.js"></script>
-    <script src="script.js"></script>
-    <script src="outputting.js"></script>
-    <!-- <script src="selectChat.js"></script> -->
-    <script src="FirebaseListeners.js"></script>
-    <script src="box.js"></script>
-    <script src="000.js"></script>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
