--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <script src="config.js"></script>
     <script src="firestore.js"></script>
     <script src="userRequestsData.js"></script>
-   
+    <script src="helperFunctions.js"></script>
+    
+
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
