--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="outputting.js"></script>
     <!-- <script src="selectChat.js"></script> -->
     <script src="FirebaseListeners.js"></script>
+    <script src="FirebaseListeners.js"></script>
     <script src="box.js"></script>
     <script src="000.js"></script>
     <link rel="stylesheet" href="main.css">
