--- a/index.html
+++ b/index.html
@@ -6,19 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wave (chatrooms) - Realtime Database</title>
     
+    <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase.js"></script>
     <script src="config.js"></script>
-    <script src="firestore.js"></script>
-    <script src="userRequestsData.js"></script>
     <script src="helperFunctions.js"></script>
     <script src="script.js"></script>
-    <script src="outputting.js"></script>
+    <script src="FirestoreHelpers.js"></script>
     <!-- <script src="selectChat.js"></script> -->
-    <script src="FirebaseListeners.js"></script>
-    <script src="FirebaseListeners.js"></script>
-    <script src="box.js"></script>
-    <script src="000.js"></script>
+    
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
