--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="FirestoreHelpers.js"></script>
     <script src="helperFunctions.js"></script>
     <script src="script.js"></script>
+    <script src="state.js"></script>
     <!-- <script src="selectChat.js"></script> -->
     
     <link rel="stylesheet" href="main.css">
