findingRoom - based on Date( ) obj

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="helperFunctions.js"></script>
     <script src="script.js"></script>
     <script src="state.js"></script>
-    <script src="creatingMsgBasedOnTime.js"></script>
+    <script src="findingRoom.js"></script>
 
 
 
