--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="script.js"></script>
     <script src="state.js"></script>
     <script src="findingRoom.js"></script>
+    <script src="creatingMsg.js"></script>
 
 
 
